--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
   <title>amine_age</title>
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" type="text/css" href="loading.css">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-147514781-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-147514781-1');
+  </script>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5154988531467064"
           crossorigin="anonymous"></script>
 </head>
